 . Demos: organized tests folder (issue #280)
 . Demos: Atlas and Sprites uses TintBy and TintTo (issue #204)
 . Demos: Menu shows how to use padding / dynamic toggle items (part of issue #249, issue #224)
 . Demos: added drawing primitives excample (part of issue #322)
 . Director: Attach uses 'bounds' not 'frame' (issue #233)
 . Documentation: API doc documents free functions (issue #314)
 . Menu: an empty menu can be crated (issue #277)
 . Menu: align supports padding (issue #249)
 . Menu: align takes into account scale (issue #248)
 . Menu: MenuToggleItem supports add/remove items in runtime (issue #224)
 . Particles: Use by default fire.pvr (issue #276)
 . Particles: resetSystem actually resets the system (issue #252)
 . Particles: texture is a property (issue #282)
 . Particles: colors and vertices in 1 VBO (issue #246)
 . Primitives: deprecated all functions. New functions uses CGPoint (issue #322)
 . Scheduler: improved timer performance (issue #309)
 . SoundSupport: supports vorbis codec (issue #321)
 . ccArray: a fast alternative to NSMutableArray (issue #304)
 . TextureAtlas: fixed colorarray memory leak (issue #272)
 . TextureAtlas: support for insert,remove,reorder (issue #275)
 . TextureAtlas: free indices correctly when out of memory (issue #293)
 . TextureAtlas: resizeCapacity returns BOOL instead of raise exception (issue #294)
 . TextureAtlas: prevent crash when not enough memory while allocating color (issue #295)
 . TextureNode: texture is "retain" not "assign" (issue #230 and issue #274)
 . TileMapAtlas: supports fullpath (issue #220)
 . TileMapAtlas: don't render in subpixels (issue #135)
 . XCode project: added class model (issue #312)
 
version 0.7.1 - 20-Mar-2009
 . Actions: added tags to actions (issue #222)
 . Actions: Spawns can be Speeded (issue #257)
 . Actions: Speed can be altered in runtime (part of issue #236)
 . AtlasSprite: Sprite sheet implementation (issue #238)
 . Chipmunk: cpVect is defined as a CGPoint (issue #260)